2002-10-24  Richard Sandiford  <rsandifo@redhat.com>

	* optabs.c (expand_binop): Don't reuse the shift target in the
	middle of shift sequences.

2002-10-23  Ziemowit Laski <zlaski@apple.com>

	* objc/objc-act.c (get_static_reference): Remove unneeded
	TYPE_BINFO initialization.
	(get_object-reference): Likewise.
	(build_constructor): Tighten precondition check.
	(finish_message_expr): Likewise.

2002-10-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (local_symbolic_operand): Move LABEL_REF test
	after CONST test.

2002-10-23  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/ia64.c (hfa_element_mode): Don't allow 128 bit floats
	in HFAs.

2002-10-23  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (TARGET_ASM_CAN_OUTPUT_MI_THUNK): True.
	(alpha_output_mi_thunk_osf): Handle vcall_offset.

2002-10-23  Zack Weinberg  <zack@codesourcery.com>

	* langhooks.h (struct lang_hooks_for_tree_inlining): Add
	var_mod_type_p.
	* langhooks-def.h: Default for tree_inlining.var_mod_type_p is
	hook_tree_bool_false.

	* tree.c (variably_modified_type_p): Moved here from
	cp/tree.c.  Use lang_hooks.tree_inlining.var_mod_type_p for
	language-specific cases.  Due to this, must weaken some 'if
	and only if' checks to merely 'if'.
	* tree.h: Prototype variably_modified_type_p.

	* tree-inline.c (walk_tree): #undef WALK_SUBTREE_TAIL at end.

2002-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/linux.h (CC1_SPEC, CC1PLUS_SPEC): Remove.
	* config/s390/s390.c (optimization_options): Disable -fcaller-saves.

	* config/s390/s390-protos.h (fp_operand): Remove.
	* config/s390/s390.c (fp_operand): Remove.
	* config/s390/s390.md ("movdi"): Replace fp_operand by FP_REG_P.
	("*movdi_lhi", "*movdi_lli", "*movdi_larl"): Likewise.
	("movsi", "*movsi_lhi", "*movsi_lli"): Likewise.
	(movdi_31, movdf_31 splitters): Likewise.

	* config/s390/s390.h (IEEE_FLOAT): Remove.
	(TARGET_FLOAT_FORMAT): Define in terms of TARGET_IEEE_FLOAT.
	(INT_REGNO_P): Rename to ...